<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_165sdp"
            android:layout_height="@dimen/_165sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:contentDescription="@string/logo_disdik"
            android:src="@drawable/logo_disdik" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/selamat_datang_di_aplikasi_e_absensi_bidang_siber_sandi_jakarta"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            tools:ignore="RtlSymmetry" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_nip"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColorHint="@color/abu_soft">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_usrname"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/dosis_bold"
                android:hint="@string/input_nip"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_paswd"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/abu_soft"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_pswd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/dosis_bold"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login_submit"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/hijau"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/login"
            android:textColor="#FFF"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/lupa_password"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible" />
    </LinearLayout>

</ScrollView>