<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgetpswd.ResetPasswordActivity">

    <ImageView
        android:id="@+id/iv_reset"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/logo_disdik" />

    <TextView
        android:id="@+id/tv_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/vesper_libre_medium"
        android:text="@string/reset_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reset_nip"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_reset"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="@color/abu_soft">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_nip"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/dosis_bold"
            android:hint="@string/input_nip"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_reset_email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_reset_nip"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="@color/abu_soft">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:fontFamily="@font/dosis_bold"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:backgroundTint="@color/hijau"
        android:id="@+id/btn_cek_submit"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="60dp"
        android:layout_below="@+id/til_reset_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/dosis_bold"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />
</RelativeLayout>