<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cuti.FormCutiActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/dosis_bold"
        android:gravity="center"
        android:text="Pengajuan Cuti"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="@string/nama_pegawai"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/nama_cuti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:text="Andrie " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="@string/nip_pegawai"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/nip_cuti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:text="Andrie " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/dosis_semibold"
                android:text="@string/sisa_cuti"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/sisa_cuti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:text="Andrie " />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/abu_soft">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_tanggal_awal_cuti"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="false"
                    android:fontFamily="@font/dosis_semibold"
                    android:hint="@string/tanggal_awal"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/abu_soft">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_tanggal_akhir_cuti"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:focusable="false"
                    android:fontFamily="@font/dosis_semibold"
                    android:hint="@string/tanggal_akhir"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/abu_soft">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_keterangan_cuti"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:fontFamily="@font/dosis_semibold"
                    android:hint="@string/input_keterangan"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_kirim_cuti"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:fontFamily="@font/dosis_extrabold"
                android:gravity="center"
                android:text="@string/submit"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>